fixed css overflow

--- a/app/styles/stylish-portfolio.scss
+++ b/app/styles/stylish-portfolio.scss
@@ -89,7 +89,7 @@ body {
     margin-top:8%;
 }
 .makeBigger {
-    padding-bottom:5%;
+    padding-bottom:0%;
 }
 .upMore {
     margin-bottom:1%;
